--- a/Fitasia/resources/styles/styles.css
+++ b/Fitasia/resources/styles/styles.css
@@ -13,6 +13,7 @@ header {
     position: fixed;
     top: 0;
     z-index: 200;
+    background-color: rgba(0, 0, 0, 0.0);
 }
 
     header img {
@@ -22,8 +23,10 @@ header {
 
     a, header a:visited {
         text-decoration: none;
-        color: orange;
+        color: white;
     }
+
+
 
 li {
     list-style: none;
@@ -71,9 +74,13 @@ li {
 .dropdown {
     position: absolute;
     right: 40px;
-    top: 13px;
-    border: 1px solid black;
+    top: 15px;
+    border-radius: 8px 0px 8px 0px;
+    -moz-border-radius: 8px 0px 8px 0px;
+    -webkit-border-radius: 8px 0px 8px 0px;
+    border: 0px solid #000000;
     color: Black;
+    font-family: 'Gill Sans MT';
 }
 
 /* Video & Registration */
@@ -93,11 +100,12 @@ video {
 .fullscreen-bg {
     min-width: 100%;
     height: 100vh;
-    background-color: rgba(255, 80, 44, 1);
+    background-color: rgba(223, 80, 44, 1);
     overflow: hidden;
     position: absolute;
-    -webkit-filter: contrast(200%); /* Chrome, Safari, Opera */
-    filter: contrast(200%);
+    -webkit-box-shadow: inset 0px 0px 143px 101px rgba(255,81,1,1);
+    -moz-box-shadow: inset 0px 0px 143px 101px rgba(255,81,1,1);
+    box-shadow: inset 0px 0px 143px 101px rgba(255,81,1,1);
 }
 
 .overlay {
@@ -392,13 +400,13 @@ aside div:hover {
 }
 
 .item {
-    display: inline-block;
+    display: inline-table;
     position: relative;
     width: 200px;
     height: 0;
     font-size: 10px;
     cursor: pointer;
-    margin: 5px;
+    margin: 0px 10px 10px 10px;
 }
 
 .smooth-transform {
@@ -412,8 +420,9 @@ aside div:hover {
 .item:hover {
     -webkit-filter: opacity(100%);
     filter: opacity(100%);
-    transform: scale(1.05);
-    font-weight: bold;
+    -webkit-box-shadow: 0px 0px 21px 3px rgba(240,108,240,1);
+    -moz-box-shadow: 0px 0px 21px 3px rgba(240,108,240,1);
+    box-shadow: 0px 0px 21px 3px rgba(240,108,240,1);
 }
 
 .item .inside img {
@@ -424,7 +433,6 @@ aside div:hover {
 .item .inside {
     text-align: left;
     padding: 0 10px 0 10px;
-    margin: 10px;
     overflow: hidden;
 }
 
@@ -434,7 +442,7 @@ aside div:hover {
     font-size: 15px;
 }
 
-.item .inside img {
+.item .inside .itemImage {
     position: absolute;
     top: 0;
     left: 0;
@@ -443,17 +451,24 @@ aside div:hover {
     z-index: -1;
 }
 
-.item .inside img {
+.benefit img {
+    width: 24px;
+    height: 20px;
+    padding: 0 2px 0 2px;
 }
 
 .item ul {
-    background-color: #808080;
+    background-color: rgba(230, 126, 36, 0.8);
     padding: 0;
     margin: 0;
+    height: 24px;
+    text-align: left;
+    
 }
 
     .item ul li {
-        display: inline-block;
+        vertical-align: middle;
+        align-items: center;
     }
 
 .inputField {
